--- a/ImmigrationLegalService.html
+++ b/ImmigrationLegalService.html
@@ -218,6 +218,7 @@
   <script src="js/main.js"></script>
 
 </body>
+<script type="text/javascript">			  
  $(document).ready(function() {
       var url = "https://nvfsserver.azurewebsites.net/sqlTest2.php";
       $.getJSON(url, function(result) {
@@ -235,4 +236,5 @@
           });
       });
   });
+</script>
 </html>
