--- a/EarlyHeadStart.html
+++ b/EarlyHeadStart.html
@@ -9,7 +9,7 @@
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
-  <link href="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
@@ -44,13 +44,13 @@
       <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-        <a href="index.html"><img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/nvfs.png" alt="" title="" /></a>
+        <a href="index.html"><img src="img/nvfs.png" alt="" title="" /></a>
       </div>
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="index.html">Home</a></li>
-          <li class="menu-active"><a href="directory.html">Directory</a></li>
+          <li class="menu-active"><a href="Resources.html">Resources</a></li>
           <li class="menu-has-children"><a href="Services.html">Services</a>
             <ul>
               <li><a href="EarlyChildhoodDev.html">Early Childhood Development</a></li>
@@ -111,20 +111,38 @@
         </p>
 
           <div class="img">
-            <img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/EHS.jpg" alt="" class="img-fluid">
+            <img src="img/EHS.jpg" alt="" class="img-fluid">
           </div>
 
           <section id="call-to-action" class="wow fadeIn">
             <div class="container text-center">
               <h3><center>Contact</center></h3>
               <font color="white">
-                <strong>Arlington</strong><br>(571)748-2796<br><br>
+                <!--<strong>Arlington</strong><br>(571)748-2796<br><br>
                 <strong>Loudoun</strong><br>(571)748-2792<br><br>
                 <strong>Prince William – Manassas</strong><br>(571)748-2772<br><br>
                 <strong>Prince William – Woodbridge</strong><br>(571)748-2703<br><br>
                 <h5>HOME-BASED PROGRAMS</h5>
                 <strong>Loudoun:</strong> (571)748-2785<br>
                 <strong>Prince William:</strong> (571)748-2664<br>
+                -->
+                <strong>
+                  <a id="name"></a><br>
+                  <a id="phone" href="#"></a><br><br>
+                  <a id="name2"></a><br>
+                  <a id="phone2" href="#"></a><br><br>
+                  <a id="name3"></a><br>
+                  <a id="phone3" href="#"></a><br><br>
+                  <a id="name4"></a><br>
+                  <a id="phone4" href="#"></a><br><br>
+                </strong>
+                <h5 id="subtitle"></h5>
+                <strong>
+                  <a id="name5"></a><br>
+                  <a id="phone5" href="#"></a><br><br>
+                  <a id="name6"></a><br>
+                  <a id="phone6" href="#"></a><br>
+                </strong>
             </font>
               <br><a class="cta-btn" href="https://www.nvfs.org/our-services/early-childhood-development/early-head-start/">Additional Information</a>
             </div>
@@ -178,4 +196,53 @@
   <script src="js/main.js"></script>
 
 </body>
+<script type="text/javascript">
+	
+  $(document).ready(function() {
+      var url = "https://nvfsserver.azurewebsites.net/sqlTest2.php";
+      $.getJSON(url, function(result) {
+          console.log(result);
+          $.each(result, function(i, field) {
+  if(field.ID == 13){
+              document.getElementById("name").innerHTML = field.name;
+              document.getElementById("phone").innerHTML = field.phone;	
+               var strLink = "tel:" + field.phone;
+                document.getElementById("phone").setAttribute("href",strLink);
+       }
+       if(field.ID == 14){
+              document.getElementById("name2").innerHTML = field.name;
+              document.getElementById("phone2").innerHTML = field.phone;	
+                var strLink = "tel:" + field.phone;
+                 document.getElementById("phone2").setAttribute("href",strLink);
+       }
+       if(field.ID == 15){
+              document.getElementById("name3").innerHTML = field.name;
+              document.getElementById("phone3").innerHTML = field.phone;	
+                var strLink = "tel:" + field.phone;
+                  document.getElementById("phone3").setAttribute("href",strLink);
+       }
+       if(field.ID == 16){
+              document.getElementById("name4").innerHTML = field.name;
+              document.getElementById("phone4").innerHTML = field.phone;	
+                var strLink = "tel:" + field.phone;
+                  document.getElementById("phone4").setAttribute("href",strLink);
+       }
+       if(field.ID == 17){
+              document.getElementById("name5").innerHTML = field.name;
+              document.getElementById("subtitle").innerHTML = field.title;
+              document.getElementById("phone5").innerHTML = field.phone;	
+               var strLink = "tel:" + field.phone;
+                 document.getElementById("phone5").setAttribute("href",strLink);
+              document.getElementById("name6").innerHTML = field.name2;
+              document.getElementById("phone6").innerHTML = field.phone2;	
+               var strLink = "tel:" + field.phone2;
+                 document.getElementById("phone6").setAttribute("href",strLink);
+       }
+ else{
+ return true;
+ }
+          });
+      });
+  });
+</script>
 </html>
