--- a/HeadStart.html
+++ b/HeadStart.html
@@ -9,7 +9,7 @@
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
-  <link href="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
@@ -44,13 +44,13 @@
      <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-        <a href="index.html"><img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/nvfs.png" alt="" title="" /></a>
+        <a href="index.html"><img src="img/nvfs.png" alt="" title="" /></a>
       </div>
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="index.html">Home</a></li>
-          <li class="menu-active"><a href="directory.html">Directory</a></li>
+          <li class="menu-active"><a href="Resources.html">Resources</a></li>
           <li class="menu-has-children"><a href="Services.html">Services</a>
             <ul>
               <li><a href="EarlyChildhoodDev.html">Early Childhood Development</a></li>
@@ -101,15 +101,18 @@
           </p>
 
           <div class="img">
-            <img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/HS.jpg" alt="" class="img-fluid">
+            <img src="img/HS.jpg" alt="" class="img-fluid">
           </div>
 
           <section id="call-to-action" class="wow fadeIn">
             <div class="container text-center">
               <h3><center>Contact</center></h3>
               <font color="white">
-                571.748.2700 ext. 0 <br><br>
+                <!--571.748.2700 ext. 0 <br><br>
                 2920 S. Glebe Rd.<br>Arlington, VA 22206
+                -->
+                <a id="phone" href="#"></a> <br> <br>
+                <a id="address" href="#"></a>
               </font>
             </div>
           </section>
@@ -162,4 +165,28 @@
   <script src="js/main.js"></script>
 
 </body>
+<script type="text/javascript">
+	
+  $(document).ready(function() {
+      var url = "https://nvfsserver.azurewebsites.net/sqlTest2.php";
+      $.getJSON(url, function(result) {
+          console.log(result);
+          $.each(result, function(i, field) {
+  if(field.ID == 18){
+    document.getElementById("phone").innerHTML = field.phone;	
+     var strLink = "tel:" + field.phone;
+       document.getElementById("phone").setAttribute("href",strLink);
+    document.getElementById("address").innerHTML = field.address;
+      var strLink = "https://maps.apple.com/?q=" + field.address;
+        document.getElementById("address").setAttribute("href",strLink);
+     var strLink = "https://maps.google.com/?q=" + field.address;
+        document.getElementById("address1.1").setAttribute("href",strLink);
+       }
+ else{
+ return true;
+ }
+          });
+      });
+  });
+</script>
 </html>
