--- a/HomelessnessAndHousing.html
+++ b/HomelessnessAndHousing.html
@@ -214,12 +214,12 @@
               document.getElementById("phone").innerHTML = field.phone;	
                 var strLink = "tel:" + field.phone;
               document.getElementById("phone").setAttribute("href",strLink);
-              document.getElementById("name2").innerHTML = field.name;
-              document.getElementById("email2").innerHTML = field.email;
-                var strLink = "mailto:" + field.email;
+              document.getElementById("name2").innerHTML = field.name2;
+              document.getElementById("email2").innerHTML = field.email2;
+                var strLink = "mailto:" + field.email2;
 			  document.getElementById("email2").setAttribute("href",strLink);
-              document.getElementById("phone2").innerHTML = field.phone;	
-                var strLink = "tel:" + field.phone;
+              document.getElementById("phone2").innerHTML = field.phone2;	
+                var strLink = "tel:" + field.phone2;
               document.getElementById("phone2").setAttribute("href",strLink);
          }
    else{
