--- a/hungerresourcecenter.html
+++ b/hungerresourcecenter.html
@@ -128,12 +128,12 @@
                 <a id="address" href="#"><a id="address1.1" href="#"></a></a><br><br>
                 <strong>Food Assistance</strong><br><a id="phone1" href="#"></a><br><br>
 				
-				<a id="name1" href="#"></a><br>
-				<a id="title1" href="#"></a><br>
+				<a id="name1"></a><br>
+				<a id="title1"></a><br>
 				<a id="phone2" href="#"></a><br><br>
 				
-				<a id="name2" href="#"></a><br>
-				<a id="title2" href="#"></a><br>
+				<a id="name2"></a><br>
+				<a id="title2"></a><br>
 				<a id="phone3" href="#"></a><br>
               </font>
             </div>
