--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               <div class="carousel-content">
                 <h2>Directory</h2>
                 <p>Lookup phone numbers, find contact information, and locations.</p>
-                <a href="Resources.html" class="btn-get-started scrollto">Access Resources</a>
+                <a href="directory.html" class="btn-get-started scrollto">Access Resources</a>
               </div>
             </div>
           </div>
