--- a/directory.html
+++ b/directory.html
@@ -206,6 +206,8 @@
   </main>
 
 
+<footer id="footer">
+
     <div class="container">
       <div class="copyright">
         &copy; Copyright <strong>BizPage</strong>. All Rights Reserved
@@ -221,6 +223,9 @@
       </div>
     </div>
   </footer><!-- #footer -->
+
+	
+	
 
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
   <!-- Uncomment below i you want to use a preloader -->
