--- a/About.html
+++ b/About.html
@@ -92,7 +92,7 @@
     <!--==========================
       Early Childhood Development Section
     ============================-->
-    <section id="services">
+    <section id="aboutpic">
       <div class="container">
         <header class="section-header wow fadeInUp">
 		<br>
