--- a/Contact.html
+++ b/Contact.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -93,7 +94,7 @@
     <!--==========================
       Early Childhood Development Section
     ============================-->
-    <section id="services">
+    <section id="cont">
       <div class="container">
         <header class="section-header wow fadeInUp">
 		<br>
