--- a/Services.html
+++ b/Services.html
@@ -93,7 +93,7 @@
     <!--==========================
       Services Section
     ============================-->
-    <section id="departments">
+    <section id="services">
       <div class="container">
 
         <header class="section-header wow fadeInUp">
