--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>Directory</h2>
-                <p>Lookup phone numbers, find contact information, and locations.</p>
+                <p>Find phone numbers, contact information and locations.</p>
                 <a href="directory.html" class="btn-get-started scrollto">Access Resources</a>
               </div>
             </div>
@@ -139,7 +139,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>Donate</h2>
-                <p>Help Northern Virginia Families Not Just Survive, but Thrive</p>
+                <p>Help Northern Virginia Families not just survive, but thrive</p>
                 <a href="Donation.html" class="btn-get-started scrollto">Monetary Donations</a> <br>
                 <a href="DonationI.html" class="btn-get-started scrollto"> In-Kind Donations</a>
               </div>
@@ -151,7 +151,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>Volunteer</h2>
-                <p>Find volunteering opportunities near you!</p>
+                <p>Find volunteer opportunities near you!</p>
                 <a href="Volunteer.html" class="btn-get-started scrollto">Get Involved</a>
               </div>
             </div>
@@ -162,7 +162,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>Connect With Us!</h2>
-                <p>Stay up to date with all the latest events at NVFS!</p>
+                <p>Stay updated on all the latest news and events at NVFS!</p>
         <div class="social-buttons">        
         <!-- facebook  Button -->
                 <a href="https://www.facebook.com/NoVAFamilyService/" target="blank" class="social-margin"> 
