--- a/DonationI.html
+++ b/DonationI.html
@@ -109,11 +109,12 @@
 		var loc = "";
 	function check()
 		{
-			document.getElementById("finish").innerHTML = "Thank you so much for your donation! This donation was sent to NVFS and " + 
-				"once it is verified and approved, you will be contacted again to confirm the donation or correct any issues that may exist. Thank you so much for donating!";
+			document.getElementById("finish").innerHTML = "Thank you so much for your donation! This donation was sent to NVFS and once it is verified and approved, you will be contacted again to confirm the donation or correct any issues that may exist. Thank you so much for donating!";
 			
 			document.getElementById("dropdownDiv").style.display="none";
 			document.getElementById("myform").style.display="none";
+
+      document.getElementById("finishID").style.visibility="visible";
 		}
 		
 	function displayForm()
@@ -345,7 +346,10 @@
             <div class="text-center"><button type="submit" id="insert" onclick="check(); return false">Submit</button></div>
           </form>
 	
-	    <div><p id="finish"></p></div>  
+      <div>
+      <p id="finish"></p>
+      <img id="finishID" src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/donateInKind.jpg" style="visibility: hidden;">
+      </div>  
 	
         </div>
 	      
