--- a/DonationI.html
+++ b/DonationI.html
@@ -348,7 +348,7 @@
 	
       <div>
       <p id="finish"></p>
-      <img id="finishID" src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/donateInKind.jpg" style="visibility: hidden;">
+      <img id="finishID" src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/donateInKind.png" style="visibility: hidden;">
       </div>  
 	
         </div>
