--- a/DonationI.html
+++ b/DonationI.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -345,11 +346,12 @@
             </div>
             <div class="text-center"><button type="submit" id="insert" onclick="check(); return false">Submit</button></div>
           </form>
-	
-      <div>
-      <p id="finish"></p>
-      <img id="finishID" src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/donateInKind.png" style="visibility: hidden;">
-      </div>  
+		  <div>
+         <p id="finish"></p>
+		  <div class="img"> 
+		  <img id="finishID" src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/donateInKind.png" class="img-fluid" style="visibility: hidden;">
+ </div>
+   </div>
 	
         </div>
 	      
