--- a/EarlyChildhoodDev.html
+++ b/EarlyChildhoodDev.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Early Childhood Development</title>
-  <meta name="viewport" content="initial-scale = 1, width= device-width, height= device-height, viewport-fit= cover"> con
+  <meta name="viewport" content="initial-scale = 1, width= device-width, height= device-height, viewport-fit= cover">
   <meta content="" name="keywords">
   <meta content="" name="description">
 
