--- a/directory.html
+++ b/directory.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <title>Resources</title>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta name="viewport" content="initial-scale = 1, width= device-width, height= device-height, viewport-fit= cover">
   <meta content="" name="keywords">
   <meta content="" name="description">
 
