--- a/EarlyHeadStart.html
+++ b/EarlyHeadStart.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Early Head Start</title>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta name="viewport" content="initial-scale = 1, width= device-width, height= device-height, viewport-fit= cover">
   <meta content="" name="keywords">
   <meta content="" name="description">
 
