--- a/DonationI.html
+++ b/DonationI.html
@@ -185,16 +185,15 @@
 				Priority Items:
 				<ul>
 					<li>Food</li>
-					<li>Clothing</li>
+					<li>Cleaning Supplies</li>
+					<li>Paper Products</li>
+					<li>Toiletries (Full-size)</li>
+					<li>Diapers and Wipes</li>
 					<li>Household Items</li>
-					<li>Toiletries</li>
-					<li>Books</li>
-					<li>Toys</li>
-					<li>Transportation</li>
-					<li>Art & Classroom Supplies</li>
-					<li>Electronics</li>
-					<li>Sports Equipment</li>
-					<li>Other</li>	
+					<li>Art & Classroom Supplies (Pre-school)</li>
+					<li>Board Books</li>
+					<li>Transportation (Metro cards, gas cards, ride service vouchers)</li>
+					<li>Gift Cards</li>	
 				</ul>
 			</li>
 		</ul>
