--- a/Contact.html
+++ b/Contact.html
@@ -102,7 +102,7 @@
 		<br>
 		<br>
           <h3>Contact</h3>
-		<h4><center>Offices</center></h4>
+		<h4><center>Locations</center></h4>
 		  <h5><center>Headquarters</center></h5>
 		  <p>
 		  <font color="white"><a id="address2" href="#"><a id="address2.1" href="#"></a></a></font><br>
