--- a/DonationI.html
+++ b/DonationI.html
@@ -329,16 +329,15 @@
 			<label>Donation Type: </label>
              <select id = "donationType" name="donationType">
                <option value = "Food">Food</option>
-               <option value = "Clothing">Clothing</option>
-               <option value = "Household Items">Household Items</option>
-               <option value = "Toiletries">Toiletries</option>
-	       <option value = "Books">Books</option>
-	       <option value = "Toys">Toys</option>
-	       <option value = "Transportation">Transportation</option>
-	       <option value = "Art & Classroom Supplies">Art & Classroom Supplies</option>
-	       <option value = "Electronics">Electronics</option>
-	       <option value = "Sports Equipment">Sports Equipment</option>
-	       <option value = "Other">Other</option>
+               <option value = "Cleaning Supplies">Cleaning Supplies</option>
+               <option value = "Paper products">Paper products</option>
+               <option value = "Toiletries (Full-size)">Toiletries (Full-size)</option>
+	       <option value = "Diapers and Wipes">Diapers and Wipes</option>
+	       <option value = "Household items">Household items</option>
+	       <option value = "Classroom Supplies (Pre-school)">Classroom Supplies (Pre-school)</option>
+	       <option value = "Board Books">Board Books</option>
+	       <option value = "Transportation (Metro cards, gas cards, ride service vouchers)">Transportation (Metro cards, gas cards, ride service vouchers)</option>
+	       <option value = "Gift cards">Gift cards</option>
              </select>
 	</div>
             <div class="form-group">
