--- a/Contact.html
+++ b/Contact.html
@@ -121,7 +121,7 @@
 		
 		  <h5><center><div id = "ServeTitle"></div></center></h5>
 		  <p>
-		  <font color="white"><a id="ServeAddress" href="#"><a id="ServeAddress2" href="#"></a</a></font><br>
+			  <font color="white"><a id="ServeAddress" href="#"><a id="ServeAddress2" href="#"></a></a></font><br>
 		  Phone Number: <a id = "ServePhone" href="#"></a> <br>
 		  </p>
           <!--<div class="img">
