--- a/DonationI.html
+++ b/DonationI.html
@@ -186,16 +186,15 @@
 				Priority Items:
 				<ul>
 					<li>Food</li>
-					<li>Clothing</li>
+					<li>Cleaning Supplies</li>
+					<li>Paper Products</li>
+					<li>Toiletries (Full-size)</li>
+					<li>Diapers and Wipes</li>
 					<li>Household Items</li>
-					<li>Toiletries</li>
-					<li>Books</li>
-					<li>Toys</li>
-					<li>Transportation</li>
-					<li>Art & Classroom Supplies</li>
-					<li>Electronics</li>
-					<li>Sports Equipment</li>
-					<li>Other</li>	
+					<li>Classroom Supplies (Pre-school)</li>
+					<li>Board Books</li>
+					<li>Transportation (Metro cards, gas cards, ride service vouchers)</li>
+					<li>Gift cards</li>	
 				</ul>
 			</li>
 		</ul>
@@ -330,10 +329,10 @@
              <select id = "donationType" name="donationType">
                <option value = "Food">Food</option>
                <option value = "Cleaning Supplies">Cleaning Supplies</option>
-               <option value = "Paper products">Paper products</option>
+               <option value = "Paper Products">Paper Products</option>
                <option value = "Toiletries (Full-size)">Toiletries (Full-size)</option>
 	       <option value = "Diapers and Wipes">Diapers and Wipes</option>
-	       <option value = "Household items">Household items</option>
+	       <option value = "Household Items">Household Items</option>
 	       <option value = "Classroom Supplies (Pre-school)">Classroom Supplies (Pre-school)</option>
 	       <option value = "Board Books">Board Books</option>
 	       <option value = "Transportation (Metro cards, gas cards, ride service vouchers)">Transportation (Metro cards, gas cards, ride service vouchers)</option>
