--- a/Contact.html
+++ b/Contact.html
@@ -101,28 +101,28 @@
 		<br>
 		<br>
 		<br>
-          <h3>Contact</h3>
-		<h4><center>Locations</center></h4>
-		  <h5><center>Headquarters</center></h5>
+		<font color="white"> <h3>Contact</h3> </font>
+		<font color="white"> <h4><center>Locations</center></h4> </font>
+		<font color="white"> <h5><center>Headquarters</center></h5> </font>
 		  <p>
 		  <font color="white"><a id="address2" href="#"><a id="address2.1" href="#"></a></a></font><br>
-		  Phone Number: <a id = "phone2" href="#"></a> <br>
+	          <font color="white"> Phone Number: <a id = "phone2" href="#"></a> </font> <br>
 		  Fax: 703.385.5176
 		  </p>
-		  <h5><center><div id = "maintitle"></div></center></h5>
+		<font color="white"> <h5><center><div id = "maintitle"></div></center></h5> </font>
 		    
-		  <h5><center><div id = "name3"></div> </center></h5>
+		<font color="white"> <h5><center><div id = "name3"></div> </center></h5> </font>
 		  <p>
 
-		  <font color="white"><a id="address3" href="#"><a id="address3.1" href="#"></a></a></font><br>
-		  Phone Number: <a id = "phone3" href="#"></a> <br>
+		 <font color="white"><a id="address3" href="#"><a id="address3.1" href="#"></a></a></font><br>
+			  <font color="white">Phone Number: <a id = "phone3" href="#"></a> </font> <br>
 		  
 		  </p>
 		
-		  <h5><center><div id = "ServeTitle"></div></center></h5>
+		<font color="white"> <h5><center><div id = "ServeTitle"></div></center></h5> </font>
 		  <p>
 			  <font color="white"><a id="ServeAddress" href="#"><a id="ServeAddress2" href="#"></a></a></font><br>
-		  Phone Number: <a id = "ServePhone" href="#"></a> <br>
+			  <font color="white"> Phone Number: <a id = "ServePhone" href="#"></a> </font> <br>
 		  </p>
           <!--<div class="img">
             <img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/ECD.jpg" alt="" class="img-fluid">
