--- a/Contact.html
+++ b/Contact.html
@@ -101,13 +101,13 @@
 		<br>
 		<br>
 		<br>
-		<font color="white"> <h3>Contact</h3> </font>
+		<h3> <font color="white">Contact </font></h3>
 		<font color="white"> <h4><center>Locations</center></h4> </font>
 		<font color="white"> <h5><center>Headquarters</center></h5> </font>
 		  <p>
 		  <font color="white"><a id="address2" href="#"><a id="address2.1" href="#"></a></a></font><br>
 	          <font color="white"> Phone Number: <a id = "phone2" href="#"></a> </font> <br>
-		  Fax: 703.385.5176
+			  <font color="white"> Fax: 703.385.5176 </font>
 		  </p>
 		<font color="white"> <h5><center><div id = "maintitle"></div></center></h5> </font>
 		    
