--- a/About.html
+++ b/About.html
@@ -99,9 +99,10 @@
 		<br>
 		<br>
 		<br>
-          <h3>About</h3>
-          <h4><center>About Us</center></h4>
-          <p>
+		<h3><font color="white">About</font></h3>
+		<font color="white"><h4><center>About Us</center></h4></font>
+          	<font color="white">
+		<p>
 		  Northern Virginia Family Service’s (NVFS) breadth, 
 		  depth and scope of services offer the resources and 
 		  support to ensure that everyone in need, at every stage of life, 
@@ -111,13 +112,16 @@
 		  Every year, we empower 42,000 individuals to achieve self-sufficiency. With these 
 		  essential resources, our community is better equipped for future success and 
 		  engagement among all of our neighbors.
-		  </p>
+		 </p>
+		</font>
 		  <br><br>
-		  <h4><center>Our Mission</center></h4>
-		  <p>
+		<font color="white"><h4><center>Our Mission</center></h4></font>
+		<font color="white">  
+		<p>
 		  To empower individuals and families to improve their quality of life, 
 		  and to promote community cooperation and support in responding to family needs.
 		  </p>
+		</font>
           <!--<div class="img">
             <img src="https://cseastus1003bffd85a1d74b.blob.core.windows.net/blobs/ECD.jpg" alt="" class="img-fluid">
           </div>
